--- a/ECAppForCA/ECApp.IntegrationTests/ECApp.IntegrationTests.csproj
+++ b/ECAppForCA/ECApp.IntegrationTests/ECApp.IntegrationTests.csproj
@@ -14,6 +14,7 @@
         <PackageReference Include="Dapper" Version="2.1.44" />
         <PackageReference Include="FluentAssertions" Version="8.0.0" />
         <PackageReference Include="MediatR" Version="12.4.1" />
+        <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.6" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.1" />
         <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.1" />
