--- a/ECAppForCA/ECApp.ApiBackend/ECApp.ApiBackend.csproj
+++ b/ECAppForCA/ECApp.ApiBackend/ECApp.ApiBackend.csproj
@@ -8,8 +8,15 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="MediatR" Version="12.4.1" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.13" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.2"/>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\ECApp.Application\ECApp.Application.csproj" />
+      <ProjectReference Include="..\ECApp.Infrastructure\ECApp.Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
