--- a/ECAppForCA/ECApp.ApiBackend/appsettings.json
+++ b/ECAppForCA/ECApp.ApiBackend/appsettings.json
@@ -1,9 +1,16 @@
 {
+  "ConnectionStrings": {
+    "MasterDBConn": "Server=127.0.0.1;Persist Security Info=False;User ID=sa;Password=1qaz@WSX3edc;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;",
+    "ECDBConn": "Server=127.0.0.1;Initial Catalog=ECDB;Persist Security Info=False;User ID=sa;Password=1qaz@WSX3edc;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Auth": {
+    "Secret": "a3ce508290341fe021e6ef77b53de56d",
+  }
 }
